--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,12 @@ spring:
     active: abc,def
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3360/springboot_test
+    url: jdbc:mysql://localhost:3360/springboot_test
     username: root
     password: root
+  redis:
+    host: localhost
+    port: 6379
 
 #tomcat端口修改
 server:
@@ -32,3 +35,4 @@ mybatis:
   configuration:
     #日志配置
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
